# standards

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: contract.yml
extended-vft/: Cargo.toml  README.md  build.rs
extended-vft-old/: Cargo.toml
extended-vft-old/app/src/services/extended_vft/: mod.rs
extended-vft-old/app/tests/: test.rs
extended-vft/app/: Cargo.toml
extended-vft/app/src/: lib.rs
extended-vft/app/src/services/: mod.rs
extended-vft/app/src/services/extended_vft/: funcs.rs  mod.rs
extended-vft/app/src/services/vft/: funcs.rs  mod.rs  utils.rs
extended-vft/app/tests/: test.rs
extended-vft/app/tests/utils_gclient/: mod.rs
extended-vft/client/: Cargo.toml  build.rs
extended-vft/client/src/: lib.rs
extended-vft/src/: lib.rs
extended-vft/tests/: node_test.rs  test.rs
extended-vft/tests/utils_gclient/: mod.rs
extended-vft/wasm/: .binpath  Cargo.toml  build.rs  extended_vft.idl
extended-vft/wasm/src/: lib.rs
extended-vmt/: Cargo.toml  README.md  build.rs
extended-vmt/app/: Cargo.toml
extended-vmt/app/src/: lib.rs
extended-vmt/app/src/services/: mod.rs
extended-vmt/app/src/services/extended_vmt/: funcs.rs  mod.rs  utils.rs
extended-vmt/client/: Cargo.toml  build.rs
extended-vmt/client/src/: lib.rs
extended-vmt/src/: lib.rs
extended-vmt/wasm/: .binpath  Cargo.toml  build.rs  extended_vmt.idl
extended-vmt/wasm/src/: lib.rs
extended-vnft/: Cargo.toml  README.md  build.rs
extended-vnft/app/: Cargo.toml
extended-vnft/app/src/: lib.rs
extended-vnft/app/src/services/extended_vnft/: mod.rs
extended-vnft/app/tests/: node_test.rs  test.rs
extended-vnft/client/: Cargo.toml  build.rs
extended-vnft/client/src/: lib.rs
extended-vnft/src/: lib.rs
extended-vnft/tests/: node_test.rs  test.rs
extended-vnft/tests/utils_gclient/: mod.rs
extended-vnft/wasm/: .binpath  Cargo.toml  build.rs  extended_vnft.idl
gear-erc20/: Cargo.toml
gear-erc20/app/src/: lib.rs
gear-erc20/app/src/services/: utils.rs
gear-erc20/app/src/services/admin/: mod.rs
gear-erc20/app/src/services/aggregated/: mod.rs
gear-erc20/app/src/services/erc20/: mod.rs  storage.rs  utils.rs
gear-erc20/app/src/services/pausable/: mod.rs
gear-erc20/app/src/services/roles/: mod.rs  utils.rs
gear-erc20/app/tests/: node_test.rs  test.rs
gear-erc20/app/tests/utils/: mod.rs
gear-erc20/app/tests/utils_gclient/: mod.rs
gear-erc20/wasm/: .binpath  build.rs  erc20.idl
grc20/: Cargo.toml
grc20/app/: Cargo.toml
grc20/app/src/: lib.rs
grc20/app/src/services/: mod.rs  utils.rs
grc20/app/src/services/erc20/: funcs.rs  mod.rs  storage.rs  utils.rs
grc20/wasm/: .binpath  Cargo.toml  erc20.idl
grc20/wasm/src/: lib.rs
vft/: .gitignore
vft-for-bridge/: Cargo.toml
vft-for-bridge/app/src/: lib.rs
vft-for-bridge/app/src/services/vft/: utils.rs
vft-for-bridge/app/src/services/vft_master/: funcs.rs  mod.rs
vft-for-bridge/wasm/: .binpath  Cargo.toml  vft_master.idl
vft-for-bridge/wasm/src/: lib.rs
vft-master/: Cargo.toml
vft-master/app/: Cargo.toml
vft-master/app/src/: lib.rs
vft-master/app/src/services/: mod.rs
vft-master/app/src/services/vft/: funcs.rs  mod.rs  utils.rs
vft-master/app/src/services/vft_master/: funcs.rs  mod.rs
vft-master/wasm/: .binpath  Cargo.toml  build.rs  vft_master.idl
vft-master/wasm/src/: lib.rs
vft-service/: .gitignore  Cargo.toml
vft-service/src/: funcs.rs  lib.rs  utils.rs
vft/app/: Cargo.toml
vft/app/src/: lib.rs
vft/app/src/services/: mod.rs
vft/app/src/services/vft/: funcs.rs  mod.rs
vft/wasm/: .binpath  Cargo.toml  build.rs  vft.idl
vft/wasm/src/: lib.rs
vmt-service/: Cargo.toml
vmt-service/src/: funcs.rs  lib.rs  utils.rs
vnft-service/: .gitignore  Cargo.toml
vnft-service/src/: funcs.rs  lib.rs  utils.rs
