[workspace]
resolver = "2"

members = [
    "extended-vft",
    "extended-vft/client",
    "extended-vmt",
    "extended-vmt/client",
    "extended-vnft",
    "extended-vnft/client",
    "vft-service",
    "vmt-service",
    "vnft-service",
]

[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "a967e294eb8f3b55c8cf4caa3b8036d155dfde23" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "a967e294eb8f3b55c8cf4caa3b8036d155dfde23" }
gear-core = { git = "https://github.com/gear-tech/gear", rev = "a967e294eb8f3b55c8cf4caa3b8036d155dfde23" }

sails-rs = { path = "../sails/rs", package = "sails-rs" }
sails-idl-gen = { path = "../sails/rs/idl-gen", package = "sails-idl-gen" }
sails-client-gen = { path = "../sails/rs/client-gen", package = "sails-client-gen" }
# gstd = "=1.7.0"
# gclient = "=1.7.0"
# gear-core = "=1.7.0"
# sails-rs = "=0.7.1"
# sails-idl-gen = "=0.7.1"
# sails-client-gen = "=0.7.1"
log = "*"
env_logger = "*"
tokio = { version = "1.41", features = ["rt", "macros"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
