[workspace]

members = ["client"]


[package]
name = "extended-vft"
version = "0.1.0"
edition = "2021"

[dependencies]
extended-vft-app = { path = "app" }

[build-dependencies]
extended-vft-app = { path = "app" }
sails-rs = { version = "0.6.3", features = ["wasm-builder"] }
sails-idl-gen = "0.6.3"

[dev-dependencies]
extended-vft = { path = ".", features = ["wasm-binary"] }
extended-vft-client = { path = "client" }
sails-rs = { version = "0.6.3", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "=1.6.2"
gear-core = "=1.6.2"

[features]
wasm-binary = []
