[workspace]

members = ["client"]


[package]
name = "extended-vmt"
version = "0.1.0"
edition = "2021"

[dependencies]
extended-vmt-app = { path = "app" }

[build-dependencies]
extended-vmt-app = { path = "app" }
sails-rs = { version = "=0.6.1", features = ["wasm-builder"] }
sails-idl-gen = "=0.6.1"

[dev-dependencies]
extended-vmt = { path = ".", features = ["wasm-binary"] }
extended-vmt-client = { path = "client" }
sails-rs = { version = "=0.6.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
