[package]
name = "extended-vmt"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
extended-vmt-app = { path = "app" }

[build-dependencies]
extended-vmt-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
extended-vmt = { path = ".", features = ["wasm-binary"] }
extended-vmt-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio.workspace = true
gclient.workspace = true
gear-core.workspace = true

[features]
wasm-binary = []
