[workspace]

members = ["client"]


[package]
name = "extended-vnft"
version = "0.1.0"
edition = "2021"

[dependencies]
extended-vnft-app = { path = "app" }

[build-dependencies]
extended-vnft-app = { path = "app" }
sails-rs = { version = "=0.6.3", features = ["wasm-builder"] }
sails-idl-gen = "=0.6.3"

[dev-dependencies]
extended-vnft = { path = ".", features = ["wasm-binary"] }
extended-vnft-client = { path = "client" }
sails-rs = { version = "=0.6.3", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "=1.6.2"
gear-core = "=1.6.2"

[features]
wasm-binary = []
