[package]
name = "extended-vnft"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
extended-vnft-app = { path = "app" }

[build-dependencies]
extended-vnft-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
extended-vnft = { path = ".", features = ["wasm-binary"] }
extended-vnft-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio.workspace = true
gclient.workspace = true
gear-core.workspace = true

[features]
wasm-binary = []
