[package]
name = "vft-service"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.5.0" }
log = "*"
sails-rs = { git = "https://github.com/gear-tech/sails.git", branch = "gstd-pinned-v1.5.0" }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }

[dev-dependencies]
env_logger = "*"
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.5.0" }
gear-core = { git = "https://github.com/gear-tech/gear", tag = "v1.5.0" }

