[package]
name = "vft-service"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
gstd.workspace = true
log.workspace = true
sails-rs.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

[dev-dependencies]
env_logger.workspace = true

[features]
wasm-binary = []

