[package]
name = "vmt-service"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
gstd = "=1.6.2"
log = "*"
sails-rs = "=0.6.3"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }

[dev-dependencies]
env_logger = "*"

