[package]
name = "extended-vft-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
log.workspace = true
sails.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
vft.workspace = true

[dev-dependencies]
env_logger.workspace = true
gclient.workspace = true
gtest.workspace = true
gear-core.workspace = true
tokio = "1"

[build-dependencies]
gwasm-builder.workspace = true
