[package]
name = "extended_vmt_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
extended-vmt-app = { path = "../app" }
sails-rs.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true
sails-client-gen.workspace = true
extended-vmt-app = { path = "../app" }

[lib]
crate-type = ["rlib"]
name = "extended_vmt_wasm"
