[package]
name = "vft-master-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vft-master-app = { path = "../app" }

[build-dependencies]
gwasm-builder.workspace = true
sails-idl-gen.workspace = true
vft-master-app = { path = "../app" }

[lib]
crate-type = ["rlib"]